[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sundai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.7.0",
    "bitsandbytes>=0.46.0",
    "datasets>=3.6.0",
    "pandas>=2.3.0",
    "torch>=2.7.1",
    "transformers>=4.52.4",
    "trl>=0.18.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.13",
]
