[project]
name = "sundai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.7.0",
    "datasets>=3.6.0",
    "gradio>=5.33.0",
    "pandas>=2.3.0",
    "torch>=2.7.1",
    "transformers>=4.52.4",
    "trl>=0.18.1",
]

[dependency-groups]
dev = [
    "hf-transfer>=0.1.9",
    "pre-commit>=4.2.0",
    "ruff>=0.11.13",
]
